--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ jinja2==3.1.2
 python-dotenv==1.0.0
 requests==2.31.0
 PyPDF2==3.0.0
-pandas==2.1.0
+pandas>=2.2.0
 termcolor==2.3.0
 numpy==1.24.0
 pandas-ta==0.3.14b0
